# keymano

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
crates/keylayout-core/: Cargo.toml
crates/keylayout-core/examples/: gen_examples.rs  roundtrip.rs
crates/keylayout-core/src/: bundle.rs  encoding.rs  error.rs  ids.rs  lib.rs  model.rs  modifiers.rs  parse.rs  resolve.rs  serialize.rs  special_keys.rs  templates.rs  validate.rs
crates/keylayout-core/tests/: edge_cases.rs  examples.rs  golden.rs  robustness.rs
crates/keylayout-core/tests/fixtures/: russian_pc_fixture.keylayout  russian_pc_ukelele.keylayout  sample_astral.keylayout  sample_dead.keylayout  sample_iso.keylayout
crates/keylayout-core/tests/snapshots/: golden__serialized_dead.snap  golden__serialized_iso.snap
crates/keymano-session/: Cargo.toml
crates/keymano-wasm/: Cargo.toml
crates/keymano-wasm/src/: lib.rs
docker/: core.Dockerfile  docker-entrypoint.sh  nginx.conf  web-prod.Dockerfile  web.Dockerfile
docs/: 00-overview.md  01-reference-ukelele.md  02-keylayout-format.md  03-bundle-format.md  04-physical-keyboards.md  05-architecture.md  06-tech-stack.md  07-data-model.md  08-ui-pages.md  09-interactive-keyboard.md  10-implementation-plan.md  11-ai-conventions.md  12-edge-cases-and-parity.md  13-testing-and-qa.md  14-localization-and-content.md  15-review-guide.md  AI_HANDOFF.md  DEVELOP.md  GETTING_STARTED.md  RELEASE_NOTES_MACOS.md
docs/i18n/: README.ar.md  README.bn.md  README.de.md  README.es.md  README.fa.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.mr.md  README.nl.md  README.pl.md  README.pt.md  README.ru.md  README.ta.md  README.tr.md  README.uk.md  README.ur.md  README.vi.md  README.zh-Hans.md  README.zh-Hant.md
examples/: Bulgarian (Phonetic).keylayout  Macedonian (Phonetic).keylayout  README.md  Serbian (Phonetic).keylayout  Ukrainian (Phonetic).keylayout
public/: humans.txt  llms.txt  robots.txt  site.webmanifest
public/.well-known/: security.txt
scripts/: generate-icons.sh  patch-i18n-readmes.py
src/: app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/app/: App.test.tsx  App.tsx
src/components/: About.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  Logo.tsx  Splash.tsx  Wordmark.tsx  components.test.tsx  ui.tsx
src/lib/: examples.web.test.ts  glyphs.test.ts  glyphs.ts  i18n.ts  ipc.test.ts  ipc.ts  meta.ts  mock-core.test.ts  mock-core.ts  sanitize-stem.test.ts  sanitize-stem.ts  seoStamp.test.ts  seoStamp.ts  types.ts  wasm-core.test.ts  wasm-core.ts
src/locales/: locales.test.ts
(+103 files in other folders)
