[package]
name = "keymano"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Keymano — cross-platform macOS keyboard layout editor"
default-run = "keymano"

[lib]
name = "keymano_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keylayout-core = { path = "../crates/keylayout-core" }
keymano-session = { path = "../crates/keymano-session" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
notify = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]
