[package]
name = "keylayout-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust core for reading, writing, resolving and validating macOS .keylayout / .bundle keyboard layouts"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
plist = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
